--- a/main.html
+++ b/main.html
@@ -42,8 +42,8 @@
 
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" name="" id="tos" required> <br>
-
-		<input type="submit" value="Submit">
+	
+		<button class="submit">Submit</button>
 
 	</form>
 	<!-- the entire body must be written by student -->
