--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" name="" id="tos" required> <br>
 	
-		<button class="submit">Submit</button>
+		<button type="submit">Submit</button>
 
 	</form>
 	<!-- the entire body must be written by student -->
